# abar

./: .gitignore  .typos.toml  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: build.yml  deploy.yml  test.yml
abar/: Cargo.toml
abar/src/: error.rs  main.rs
abar/src/app/: mod.rs
abar/src/cli/: mod.rs  tests.rs
abar/src/config/: events.rs  layout.rs  mod.rs  modules.rs  tests.rs
abar/src/settings/: mod.rs  tests.rs
abar/src/theme/: mod.rs  tests.rs
docs/: EXEC.md  PLAN.md
examples/: config.toml  minimal.toml  theme.toml
examples/scripts/keyboard/: hyprland.sh
examples/scripts/mpris/: playerctl.sh
examples/scripts/tray/: tray-menu.sh  tray.sh
examples/scripts/window/: hyprland.sh
examples/scripts/workspaces/: hyprland.sh
libabar/: Cargo.toml
libabar/src/: error.rs  lib.rs
libabar/src/color/: mod.rs  tests.rs
libabar/src/exec/: mod.rs  tests.rs
libabar/src/hit_test/: mod.rs  tests.rs
libabar/src/icon/: mod.rs  tests.rs
libabar/src/input/: mod.rs  tests.rs
libabar/src/layout/: mod.rs  tests.rs
libabar/src/model/: mod.rs
libabar/src/modules/: mod.rs
libabar/src/modules/clock/: mod.rs  tests.rs
libabar/src/modules/keyboard/: mod.rs  tests.rs
libabar/src/modules/mpris/: mod.rs  tests.rs
libabar/src/modules/tray/: ipc.rs  mod.rs  tests.rs
libabar/src/modules/window/: mod.rs  tests.rs
libabar/src/modules/workspaces/: mod.rs  tests.rs
libabar/src/render/: font.rs  mod.rs  paint.rs  tests.rs
libabar/src/spawn/: mod.rs  tests.rs
libabar/src/wayland/: mod.rs
scripts/keyboard/: hyprland_keyboard.sh
