[package]
name = "abar"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[[bin]]
name = "abar"
path = "src/main.rs"

[features]
default = ["clock", "keyboard", "tray", "workspaces", "window", "hyprland"]
clock = ["libabar/clock"]
keyboard = ["libabar/keyboard"]
tray = ["libabar/tray"]
workspaces = ["libabar/workspaces"]
window = ["libabar/window"]
hyprland = ["libabar/hyprland"]
mpris = ["libabar/mpris"]

[dependencies]
clap = { version = "4", features = ["derive"] }
libabar = { path = "../libabar" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
