[package]
name = "libabar"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Wayland layer-shell bar runtime."

[features]
default = []

[dependencies]
thiserror = "2"
tracing = "0.1"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

tempfile = "3"
