[package]
name = "libabar"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Wayland layer-shell bar runtime."

[features]
default = []
clock = []
keyboard = []
tray = []
workspaces = ["hyprland"]
window = ["hyprland"]
hyprland = []
mpris = []
svg = ["dep:resvg"]

[dependencies]
cairo-rs = { version = "0.22", default-features = false, features = ["png"] }
pango = { version = "0.22", features = ["v1_42"] }
pangocairo = "0.22"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time"] }
tracing = "0.1"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

tempfile = "3"
resvg = { version = "0.47", optional = true }
